src/test/ui/issue-46576.stderr
error: unused import: `BufRead`
  --> $DIR/issue-46576.rs:17:15
   |
17 | use std::io::{BufRead, BufReader, Read};
   |               ^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-46576.rs:14:9
   |
14 | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to previous error

